--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -8,10 +8,19 @@
   },
   "env": {
     "browser": true,
-    "node": true,
-    "es6": true
+    "node": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
-  "plugins": ["import", "react-hooks"],
-  "rules": {}
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
+  "plugins": [
+    "import",
+    "react-hooks"
+  ],
+  "rules": {
+    "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "no-console": "off"
+  }
 }
