--- a/front/package.json
+++ b/front/package.json
@@ -4,29 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
-    "build": "next build"
+    "dev": "next -p 3060",
+    "build": "next build",
+    "start": "next start"
   },
-  "author": "minwoo",
-  "license": "ISC",
+  "author": "Minwoo",
+  "license": "MIT",
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "antd": "^4.19.2",
-    "next": "^9.5.5",
+    "antd": "^4.6.6",
+    "next": "^9.5.4",
     "next-redux-wrapper": "^6.0.2",
-    "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
-    "styled-components": "^5.3.3"
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-slick": "^0.27.11",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.11.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-react": "^7.29.3",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint": "^7.10.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "nodemon": "^2.0.4",
+    "webpack": "^4.44.2"
   }
 }
