--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "faker": "^5.5.3",
     "nodemon": "^2.0.4",
     "webpack": "^4.44.2"
   }
