--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,8 @@
   "author": "minwoo",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.0",
