--- a/back/package.json
+++ b/back/package.json
@@ -10,19 +10,27 @@
   "author": "minwoo",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
-    "cookie-parser": "^1.4.6",
+    "axios": "^0.19.2",
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "mysql2": "^2.3.3",
-    "passport": "^0.6.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "helmet": "^3.22.1",
+    "hpp": "^0.2.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.21.0",
-    "sequelize-cli": "^6.4.1"
+    "sequelize": "^5.21.12",
+    "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "nodemon": "^2.0.4"
   }
 }
