--- a/back/package.json
+++ b/back/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.1",
     "helmet": "^3.22.1",
     "hpp": "^0.2.3",
+    "install": "^0.13.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql2": "^2.1.0",
