--- a/front/package.json
+++ b/front/package.json
@@ -10,26 +10,40 @@
   "author": "Minwoo",
   "license": "MIT",
   "dependencies": {
-    "antd": "^4.6.6",
-    "next": "^9.5.5",
+    "@ant-design/icons": "^4.2.1",
+    "@next/bundle-analyzer": "^9.4.4",
+    "antd": "^4.3.5",
+    "axios": "^0.19.2",
+    "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
+    "immer": "^9.0.6",
+    "install": "^0.13.0",
+    "moment": "^2.27.0",
+    "next": "^9.4.4",
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "react-slick": "^0.27.11",
+    "react-redux": "^7.2.0",
+    "react-slick": "^0.26.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "styled-components": "^5.2.0"
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.1.1",
+    "swr": "1.3.0"
   },
   "devDependencies": {
-    "eslint": "^7.10.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-react": "^7.21.3",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "faker": "^5.5.3",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "nodemon": "^2.0.4",
-    "webpack": "^4.44.2"
-  },
-  "description": ""
+    "webpack": "^4.43.0"
+  }
 }
