--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "multer": "^1.4.5-lts.1",
     "react-slick": "^0.29.0",
     "redux-saga": "^1.1.3",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "swr": "^1.3.0"
   }
 }
