--- a/front/package.json
+++ b/front/package.json
@@ -4,14 +4,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "next -p 3060",
-    "build": "next build",
+    "build": "ANALYZE=true NODE_ENV=production next build",
     "start": "next start"
   },
   "author": "Minwoo",
   "license": "MIT",
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
-    "@next/bundle-analyzer": "^9.4.4",
+    "@next/bundle-analyzer": "^9.5.5",
     "antd": "^4.3.5",
     "axios": "^0.19.2",
     "cookie-parser": "^1.4.5",
@@ -19,7 +19,7 @@
     "dotenv": "^8.2.0",
     "immer": "^9.0.6",
     "install": "^0.13.0",
-    "moment": "^2.27.0",
+    "moment": "^2.29.3",
     "next": "^9.4.4",
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^6.0.2",
